##################################################
 Revision history for Log::Log4perl
##################################################

1.05 (not yet released)
    *   (ms) die() on undefined configuration (rt 18103 by justice8@wanadoo.fr)
    *   (ms) Hugh Esco submitted a FAQ on where to put logfiles
    *   (ms) Applied patch provided by Chia-liang Kao to suppress an error
             message and skip tests in the suite when DBI is missing.

1.04 2006/02/26
    *  (ms) Duplicate log4perl directives, which previously just overwrote
            existing ones, are no longer permitted and cause the config
            parser to throw an error.
    *  (ms) If a conversion pattern was specified twice in a config
            file, the output was "ARRAY(0x804da00)" (bug reported by
            Bill Mason). Now, gobbling up property configurator values
            into an array is limited to appender properties and
            excludes the conversion pattern.
    *  (ms) Multiple calls to import (usually happens if 'use L4p' gets
            called twice within the same namespace) caused nasty warnings,
            bug reported by Greg Olszewski. Fixed by ignoring subsequent
            calls from the same package to import().
    *  (ms) Changed rendering of logdie/warn/cluck/croak/... messages
            to fix a bug reported by Martin J. Evans.
    *  (ms) Added a L4p::Appender::String appender to handle the
            rendering internally.
    *  (ms) Documentation patch by Matisse Enzer on increased/
            decreased log levels.
    *  (ms) Fixed stack trace level of logcarp()
    *  (ms) Carl Franks reported that the test suite failed on WinXP SP2
            because of a hardcoded /tmp - fixed by File::Spec->tempdir().
    *  (ms) Added reconnect_attempts and reconnect_sleep parameters to 
            DBI appender.
    *  (ms) Bugfix for rt.cpan.org #17886 (tmp files in test suite)

1.03 (2006/01/30)