@@ -3,6 +3,14 @@
 ##################################################
 
 1.05 (not yet released)
+TODO: 
+ * Global NEXT_CHECK interferes with config_and_watch
+ * Signal handler for file appender (newsyslog)
+ * Stack signal handlers if dupe signals are used
+
+    *   (ms) L4p::Config::Watch no longer sets the global $SIGNAL_CAUGHT by
+             default but uses an instance variable instead to prevent
+             clobbering L4p's config and watch mechanism.
     *   (ms) die() on undefined configuration (rt 18103 by justice8@wanadoo.fr)
     *   (ms) Hugh Esco submitted a FAQ on where to put logfiles
     *   (ms) Applied patch provided by Chia-liang Kao to suppress an error
